# DocSweeper

./: Dockerfile  README.md  __init__.py  client.py  inference.py  main.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: __init__.py  app.py  cust_env_environment.py
