[project]
name = "cust-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135.2",
    "groq>=1.1.2",
    "openai>=2.29.0",
    "openenv-core>=0.2.3",
    "openenv[core]>=0.1.13",
    "pydantic>=2.12.5",
    "uvicorn>=0.42.0",
]
[project.scripts]
server = "server.app:main"